--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -94,9 +94,10 @@
   </ul>
 
   <!-- Logout Button -->
-  <div class="p-4">
+  <div class="pl-4 py-4 overflow-hidden flex {{isExpanded ? 'gap-2':''}} group w-full">
     <uswagon-logout-button
-      [class]="'w-full py-3 px-2 font-bold rounded-lg transition-all  text-white hover:bg-white hover:text-gray-800 flex items-center justify-start'"
+    class="w-full"
+      [class]="'w-full py-3 pl-3  flex-1 font-bold transition-all  text-white group-hover:bg-white group-hover:text-gray-800 flex items-center justify-start ' + (isExpanded? 'rounded-lg':'rounded-l-lg')"
     >
       <span class="material-icons" [ngClass]="{ 'mr-4': isExpanded }">
         logout
@@ -111,5 +112,9 @@
         Logout
       </span>
     </uswagon-logout-button>
+    <div class="transition-all  w-1 {{isExpanded?'rounded-l-full':''}} group-hover:bg-white"
+      >
+        
+      </div>
   </div>
 </div>
