--- a/src/app/features/kiosk-layout/kiosk-selection/kiosk-selection.component.css
+++ b/src/app/features/kiosk-layout/kiosk-selection/kiosk-selection.component.css
@@ -1,12 +1,52 @@
 .btn-custom {
-    @apply bg-[#22381F] text-white py-3 px-6 font-bold rounded-lg text-lg transition-all duration-300 ease-in-out;
+  @apply bg-[#22381F] text-white py-3 px-6 font-bold rounded-lg text-lg transition-all duration-300 ease-in-out;
+}
+
+.btn-custom:hover {
+  @apply bg-[#1f2c1a] scale-105;
+}
+
+.btn-custom:active {
+  @apply bg-[#1a2114];
+}
+
+@media (orientation: landscape) {
+  body {
+    @apply rotate-90 absolute top-0 left-0 h-screen w-screen overflow-hidden;
+    transform-origin: left top;
   }
-  
-  .btn-custom:hover {
-    @apply bg-[#1f2c1a] scale-105;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
   }
-  
-  .btn-custom:active {
-    @apply bg-[#1a2114];
+  100% {
+    transform: translateX(-100%);
   }
-  
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+  white-space: nowrap;
+}
+/* Remove any padding/margin from body */
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+/* Ensure the video takes up the top section without any space */
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.oval-shape {
+  clip-path: ellipse(75% 60% at 50% 30%);
+}
