--- a/src/app/features/queueing-layout/queueing-layout.component.html
+++ b/src/app/features/queueing-layout/queueing-layout.component.html
@@ -1,1 +1,32 @@
-<app-queue-display></app-queue-display>
+
+
+<div class="w-full h-full font-thin flex justify-center items-center min-[3500px]:hidden text-4xl bg-black text-white">Set browser resolution to 3840 x 2180</div>
+<div class="w-full h-full hidden min-[3500px]:block">
+    <div *ngIf="isLoading" class="h-full w-full cursor-wait bg-white overflow-hidden absolute z-10 flex flex-col justify-center items-center ">
+        <app-lottie-animation class="w-[800px] h-[800px] animate-pop" animation="loader"></app-lottie-animation>
+        <div class="tracking-wider text-8xl animate-bounce animate-pop">Loading</div>
+      </div>
+    <div *ngIf="!content" class="w-full h-full flex justify-center items-center bg-black text-white font-thin text-9xl">
+        This device has not been configured.
+    </div>
+    <app-queue-display 
+    *ngIf="content"
+    [showAnnouncement]="content.announcement_on == 't'"
+    [showBackground]="content.background_on == 't'"
+    [showTime]="content.time == 't'" 
+    [showWeather]="content.weather == 't'" 
+    [showCurrency]="content.currency == 't'" 
+    [announcements]="content.announcements ?? ''" 
+    [videoUrl]="content.video"
+    [backgroundUrl]="content.background"
+    [logoUrl]="content.logo"
+    [colors]="{
+        primary_bg: content.primary_bg,
+        secondary_bg: content.secondary_bg,
+        tertiary_bg: content.tertiary_bg,
+        primary_text: content.primary_text,
+        secondary_text: content.secondary_text,
+        tertiary_text: content.tertiary_text
+    }" 
+    [title]="content.division" class="w-full h-full hidden min-[1200px]:block"></app-queue-display>
+</div>
