--- a/src/app/features/admin-layout/admin-layout.component.html
+++ b/src/app/features/admin-layout/admin-layout.component.html
@@ -4,15 +4,15 @@
   <!-- Sidebar -->
   <app-sidebar [role]="role"></app-sidebar>
 
-  <div class="h-full w-full cursor-wait bg-white overflow-hidden absolute z-10 flex flex-col justify-center items-center {{isLoading ? '': 'opacity-0 pointer-events-none'}}">
-    <app-lottie-animation class="w-96 h-96" animation="loader"></app-lottie-animation>
-    <div class="tracking-wider text-xl animate-bounce">Please Wait</div>
+  <div *ngIf="isLoading" class="h-full w-full cursor-wait bg-white overflow-hidden absolute z-10 flex flex-col justify-center items-center ">
+    <app-lottie-animation class="w-96 h-96 animate-pop" animation="loader"></app-lottie-animation>
+    <div class="tracking-wider text-xl animate-bounce animate-pop">Please Wait</div>
   </div>
   <!-- Main Content -->
   <div class="flex-1 flex flex-col overflow-auto bg-gray-100">
 
     <app-header > </app-header>
-    <div class="w-full flex-1 py-6 px-14">
+    <div class="w-full flex-1 py-6 px-6 2xl:px-14">
       <router-outlet></router-outlet>
     </div>
   </div>
