--- a/src/app/features/admin-layout/content-management/content-management.component.html
+++ b/src/app/features/admin-layout/content-management/content-management.component.html
@@ -3,17 +3,18 @@
             <img src="assets/logo/vsuHeader.png" class="w-full h-full object-contain ">
         </div>
         <!-- Main Container -->
-        <div class="flex py-5 flex-row w-full flex-1 gap-5">
+        <div class="flex py-5 flex-col-reverse 2xl:flex-row w-full h-auto 2xl:flex-1 gap-5">
             <!-- Edit Contents -->
-            <div class="flex-[1_1_0%]">
+            <div class="2xl:flex-[1_1_0%]">
                 <!-- Tabs -->
-                <div class="flex">
+                <div *ngIf="isSuperAdmin" class="flex">
                     <button  *ngFor="let division of divisions; let i = index" 
                         (click)="selectDivision(division.id)"
-                        class="h-10 transition-all {{division.id == selectedDivision ? 'bg-gradient-to-r from-green-700 to-green-800 hover:from-green-600 hover:to-green-700 text-white':'bg-white'}} px-4 flex-1 border-2 border-solid {{ i == 0 ? 'rounded-l-lg': i == 1 ? '':'rounded-r-lg' }} font-medium  hover:bg-green-600 hover:text-white">{{division.name.replace('Division', '').trim().replace('Cash','Cashier')}}</button>
+                        class="h-10 transition-all {{division.id == selectedDivision ? 'bg-gradient-to-r from-green-700 to-green-800 hover:from-green-600 hover:to-green-700 text-white':'bg-white'}} px-4 flex-1 border-2 border-solid {{ i == 0 ? 'rounded-l-lg': i == 1 ? '':'rounded-r-lg' }} font-medium  hover:bg-green-600 hover:text-white">
+                        {{division.name.replace('Division', '').trim().replace('Cash','Cashier')}}</button>
                 </div> 
                 <div *ngIf="contentLoading" class="h-full w-full flex justify-center items-center bg-white shadow-md rounded-xl border-2 border-solid hover:border-green-500">Loading</div>
-                <div *ngIf="!contentLoading" class="flex flex-col  gap-1 h-full bg-white shadow-md rounded-xl border-2 border-solid hover:border-green-500 py-3 px-3">
+                <div *ngIf="!contentLoading" class="flex flex-col  gap-1 h-full bg-white shadow-md rounded-xl border-2 border-dashed hover:border-green-500 py-3 px-3">
                     <div class="text-lg px-1"> Edit Contents</div>
                     <div class="px-1 font-thin">Change queue display layout by adjusting these settings.</div>
                     <!-- Uploads Collapsable -->
@@ -46,7 +47,13 @@
                             </div>
                             <!-- Background Image Input -->
                             <div class="flex flex-col">
-                                <label for="background" class=" text-gray-800 px-1">Background Image</label>
+                                <label for="background" class=" text-gray-800 px-1 flex justify-between">
+                                    <span>Background Image</span>
+                                    <span class="flex gap-2 items-center">
+                                        <span class="material-icons  {{toggles.background ? 'text-green-600':'text-gray-500'}}"> {{ toggles.background ? 'visibility':'visibility_off'}} </span> 
+                                        <app-toggle body="w-10 h-5" knob="w-3 h-3" translate="translate-x-5" [(isActive)]="toggles.background"></app-toggle>
+                                    </span>
+                                </label>
                                 <div (click)="bgInput.click()"   class="w-full h-10 rounded-md 
                                     transition-all
                                     hover:border-green-600 hover:text-green-700 hover:bg-green-100
@@ -74,7 +81,7 @@
                                     text-gray-400
                                     border-gray-300 border-2 border-solid 
                                     bg-white cursor-pointer select-none flex items-center px-2 justify-between"> 
-                                        <span class="w-full max-w-60 overflow-hidden text-ellipsis whitespace-nowrap">{{files.video != undefined ? files.video.name :inputFields.videoUrl ? getLastDirectory(inputFields.videoUrl): 'Choose Video File'}}</span>
+                                        <span class="w-full max-w-60 overflow-hidden text-ellipsis whitespace-nowrap">{{files.video != undefined ? files.video.name :inputFields.videoUrl ? getLastDirectory(inputFields.videoUrl) ?? 'Choose Video File': 'Choose Video File'}}</span>
                                         <span class="material-icons"> upload_file </span>
                                     </div>
                                     <input (change)="onFileChange('video', $event)" accept="video/*" name="video" #videoInput class="hidden" type="file">
@@ -86,7 +93,7 @@
                                     text-gray-400
                                     border-gray-300 border-2 border-solid 
                                     bg-white cursor-pointer select-none flex items-center px-2 justify-between"> 
-                                        <input [(ngModel)]="inputFields.youtubeURL" placeholder="Enter a youtube link" type="text" class="w-full h-full bg-transparent border-none outline-none">
+                                        <input [(ngModel)]="inputFields.youtubeURL" placeholder="Paste a youtube link" (keyup)="checkYoutubeUrl()" type="text" class="w-full h-full bg-transparent border-none outline-none">
                                         <span class="material-icons"> link </span>
                                     </div>
                                 </ng-template>
@@ -162,12 +169,12 @@
                             <div class="flex justify-between items-center w-full">
                                 <span>Colors</span>
                                 <div class="ml-2 flex gap-2">
-                                    <div class="rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.primary_bg}"> </div>
-                                    <div class="rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.secondary_bg}"> </div>
-                                    <div class="rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.tertiary_bg}"> </div>
-                                    <div class="rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.primary_text}"> </div>
-                                    <div class="rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.secondary_text}"> </div>
-                                    <div class="rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.tertiary_text}"> </div>
+                                    <div class="border-solid border-2 hover:border-green-500 rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.primary_bg}"> </div>
+                                    <div class="border-solid border-2 hover:border-green-500 rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.secondary_bg}"> </div>
+                                    <div class="border-solid border-2 hover:border-green-500 rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.tertiary_bg}"> </div>
+                                    <div class="border-solid border-2 hover:border-green-500 rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.primary_text}"> </div>
+                                    <div class="border-solid border-2 hover:border-green-500 rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.secondary_text}"> </div>
+                                    <div class="border-solid border-2 hover:border-green-500 rounded-full w-7 h-7" [ngStyle]="{backgroundColor: colors.tertiary_text}"> </div>
                                 </div>
                             </div>
                             <span *ngIf="!collapsables.colors" class="material-icons"> keyboard_arrow_down </span>
@@ -285,8 +292,26 @@
                 </div>
             </div>
             <!-- Content View -->
-            <div class="flex-[3_3_0%] h-full bg-green-950 shadow-md rounded-xl">
-                <div *ngIf="contentLoading" class="h-full w=full bg-green-950 shadow-md rounded-xl text-white flex justify-center items-center"> Loading</div>
+            <div class="aspect-[3840/2180] 2xl:aspect-auto  2xl:flex-[3_3_0%] relative ">
+                <div *ngIf="contentLoading" class="h-full w=full aspect-[3840/2180] bg-white  text-white flex justify-center items-center  shadow-md rounded-xl"> Loading</div>
+                <div *ngIf="!contentLoading" class="2xl:mb-0 absolute inset-0  aspect-[3840/2180] shadow-md rounded-xl  border-2 border-dashed hover:border-green-500 overflow-hidden">
+                    <app-queue-display 
+                    [showAnnouncement]="toggles.announcements"
+                    [showBackground]="toggles.background"
+                    [showTime]="toggles.time" 
+                    [showWeather]="toggles.weather" 
+                    [showCurrency]="toggles.currency" 
+                    [announcements]="inputFields.announcements" 
+                    [videoUrl]="inputFields.videoUrl"
+                    [backgroundUrl]="inputFields.backgroundUrl"
+                    [logoUrl]="inputFields.logoUrl"
+                    [colors]="colors" 
+                    [disableAPI]="true"
+                    [title]="getDivisionName()" class="w-full h-full hidden min-[1200px]:block"></app-queue-display>
+                    <div class="w-full h-full min-[1200px]:hidden flex bg-black items-center justify-center text-white font-thin text-lg">
+                        This resolution is not supported for preview
+                    </div>
+                </div>
             </div>
         </div>
 </section>
