--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,68 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-html, body { height: 100%; }
+html, body { height: 100%}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+::-webkit-scrollbar {
+    width: 4px; /* Width of the scrollbar */
+    height: 4px; /* Height of the scrollbar (for horizontal scrollbar) */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #32552b; /* Color of the scrollbar thumb */
+    border-radius: 4px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #193830; /* Color when hovered */
+}
+
+::-webkit-scrollbar-track {
+    background: #fdfdfd; /* Background of the scrollbar track */
+    border-radius: 4px; /* Rounded corners */
+}
+
+/* CUSTOM STYLES */
+.text-shadow {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.text-shadow-xl {
+  text-shadow: 10px 10px 20px rgba(0, 0, 0, 0.7);
+}
+
+/* CUSTOM ANIMATIONS */
+
+@keyframes scroll {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+  white-space: nowrap;
+}
+
+@keyframes pop {
+    0% {
+      transform: scale(0.8);
+      opacity: 0;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 1;
+      }
+    100% {
+      transform: scale(1);
+      opacity: 1;
+    }
+  }
+  
+  .animate-pop {
+    animation: pop 0.2s ease forwards;
+    }
